--- a/src/sass/layout/_swiper.scss
+++ b/src/sass/layout/_swiper.scss
@@ -1,12 +1,19 @@
 
 
-.swiper {
+.swiper:not(.mySwiper-vote) {
     width: 100%;
     height: 100%;
     max-height: 550px;
+    margin-top: 80px;
+
     @include pad{
         max-height: 1000px;
-        min-height: 800px;
+        min-height: 500px;
+    }
+
+    @include mobile{
+        min-height: 500px;
+        margin-top: 70px;
     }
 }
 
@@ -69,13 +76,18 @@
 }
 
 .swiper-slide img {
-    padding: 40px 0px;
+    // padding: 40px 0px;
     display: block;
     width: 100%;
     height: 100%;
-    max-height: 600px;
+    min-height: 600px;
+    max-height: 700px;
     object-fit: cover;
     overflow: hidden;
+    @include pad{
+        max-height: 660px;
+        min-height: 0px;
+    }
 }
 
 .swiper-pagination-bullet{
@@ -84,3 +96,5 @@
     border-radius: 0px;
     background-color: $c-primary;
 }
+
+
